--- a/src/styles/layout/header/_header.scss
+++ b/src/styles/layout/header/_header.scss
@@ -3,12 +3,12 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 2;
+  z-index: 5;
   height: vw($mobile, 65px);
   color: $white;
 
   @media screen and (min-width: $desktop) {
-    height: rem(125); // TODO: check desktop
+    height: rem(125);
   }
 
   &__locales {
